[workspace]
members = [
    "web",
    "eagle_macro",
    "shell",
    "macro_consumer",
    "proc_macro_lib",
    "db/mongodb_bin",
    "authority",
    "req/reqwest2",
    "multi_threading/fearless_concurrence",
    "multi_threading/e_crossbeam",
    "multi_threading/pool",
    "multi_threading/e_rayon",
    "file_local",
    "etest",
    "edoc",
    "common_utils",
    "my_err",
    "e_trait/trait_obj",
    "life_time"
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

