[workspace]
resolver = "2"
members = [
    "eagle_macro",
    "my_shell",
    "macro_consumer",
    "proc_macro_lib",
    "db/mongodb_bin",
    "authority",
    "req/reqwest2",
    "multi_threading/fearless_concurrence",
    "multi_threading/e_crossbeam",
    "multi_threading/pool",
    "multi_threading/e_rayon",
    "file_local",
    "etest",
    "edoc",
    "common_utils",
    "my_err",
    "life_time",
    "deep",
    "leetcode",
    "test_cfg",
    "docker_lib",
    "guantingxin",
    "base",
    "wasm",
    "my_tools"
, "uuu"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

