[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.107"
threadpool = "1.0"
crossbeam = "0.8.2"
rayon = "1.8.0"
tokio = { version = "1", features = ["full", "test-util"] }
futures = "0.3.24"

[[bench]]
name = "my_bench"
harness = false
[dev-dependencies]
criterion = "0.5.1"