[package]
name = "deep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = "2.34.0"
trust-dns = { version = "0.17.0", default-features = false }
my_err = {path = "../my_err"}
# 提供一个TCP的实现
smoltcp = {version="0.8.1", features=["proto-igmp", "proto-ipv4", "verbose", "log"]}
# 用于URL的解析和验证
url="2.3.1"
[[bin]]
name = "resolve"