[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webbrowser = "0.7.1"
serde_json = {version = "1.0.85"}
docopt = "1.1.1"
serde = "1.0.144"
walkdir = "2.*"
my_err = {path = "../my_err"}
druid-shell = "0.7.0"
clap = "2.34.0"
[[bin]]
name = "doc_rust"
[[bin]]
name = "cp_bin"
[[bin]]
name = "git_clone"
[[bin]]
name = "suf_len"
[[bin]]
name = "ccc"
[[bin]]
name = "cnt_size"